--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="paul.js"></script>
 </head>
 <body>
+    <input type="text" id="pa">
+    <button onclick="paul()">click me </button>
+    <table>
         
+    </table>
 </body>
 </html>
